1.大量插件优化和修改 2.INF3项目正式开启

--- a/Hack/SATm.Ex.csproj
+++ b/Hack/SATm.Ex.csproj
@@ -4,16 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F88E68A-256B-4427-8689-F09F6066E089}</ProjectGuid>
+    <ProjectGuid>{397A6682-E427-480B-8717-551C232581B2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Exo</RootNamespace>
-    <AssemblyName>Infect_Exo</AssemblyName>
+    <RootNamespace>SATm</RootNamespace>
+    <AssemblyName>SATm.Ex</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -21,20 +23,25 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="InfinityScript">
-      <HintPath>..\..\InfinityScript.dll</HintPath>
+      <HintPath>..\..\..\InfinityScript.dll</HintPath>
+    </Reference>
+    <Reference Include="SATm">
+      <HintPath>C:\Users\A2ON\Desktop\SATm.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,17 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Airdrop.cs" />
-    <Compile Include="Hud.cs" />
-    <Compile Include="Sharpshooter.cs" />
-    <Compile Include="Killstreak.cs" />
+    <Compile Include="CustomGametype.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TargetSelector.cs" />
-    <Compile Include="Tracer.cs" />
-    <Compile Include="Utility.cs" />
-    <Compile Include="Weapon.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
