--- a/INF3/INF3.csproj
+++ b/INF3/INF3.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{6F88E68A-256B-4427-8689-F09F6066E089}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Exo</RootNamespace>
-    <AssemblyName>Infect_Exo</AssemblyName>
+    <RootNamespace>INF3</RootNamespace>
+    <AssemblyName>INF3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -45,18 +45,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Airdrop.cs" />
     <Compile Include="AIZMain.cs" />
+    <Compile Include="BounsDrops.cs" />
+    <Compile Include="BoxFunction.cs" />
+    <Compile Include="Effects.cs" />
     <Compile Include="Hud.cs" />
     <Compile Include="MapEdit.cs" />
+    <Compile Include="PerkFunction.cs" />
     <Compile Include="Perks.cs" />
     <Compile Include="Sharpshooter.cs" />
-    <Compile Include="Killstreak.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TargetSelector.cs" />
     <Compile Include="Tracer.cs" />
+    <Compile Include="TurretFunction.cs" />
     <Compile Include="Utility.cs" />
     <Compile Include="Weapon.cs" />
+    <Compile Include="ZombieRollTheDice.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
