--- a/AIZombies/InfinityAIZ.csproj
+++ b/AIZombies/InfinityAIZ.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F88E68A-256B-4427-8689-F09F6066E089}</ProjectGuid>
+    <ProjectGuid>{E59D9E56-9BC5-46FE-9D93-EB853B6BE2B7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>INF3</RootNamespace>
-    <AssemblyName>INF3</AssemblyName>
+    <RootNamespace>AIZombies</RootNamespace>
+    <AssemblyName>AIZombies</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,7 +28,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="InfinityScript">
@@ -45,25 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AIZMain.cs" />
-    <Compile Include="BoxFunction.cs" />
-    <Compile Include="PowerUp.cs" />
-    <Compile Include="Effects.cs" />
-    <Compile Include="Exo.cs" />
-    <Compile Include="GobbleGum.cs" />
-    <Compile Include="Hud.cs" />
-    <Compile Include="MapEdit.cs" />
-    <Compile Include="PerkColaFunction.cs" />
-    <Compile Include="PerkCola.cs" />
-    <Compile Include="Sharpshooter.cs" />
+    <Compile Include="AIZombies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sound.cs" />
-    <Compile Include="AIZDebug.cs" />
-    <Compile Include="Tracer.cs" />
-    <Compile Include="Turret.cs" />
+    <Compile Include="Sharpshooter.cs" />
     <Compile Include="Utility.cs" />
     <Compile Include="Weapon.cs" />
-    <Compile Include="ZombieRollTheDice.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
